--- a/create_account.html
+++ b/create_account.html
@@ -15,11 +15,9 @@
             <img src="Imagenes/return-icon.png" alt="Return">
         </a>
 
-        <img src="Imagenes/customer-icon.png" alt="Profile Image" id="profile-image">
-
     <!-- Formulario -->
 
-      <form id="login-form">
+ 0       <form id="login-form">
             <label for="Name">NAME</label>
             <input type="text" id="username" name="username">
 
@@ -32,6 +30,11 @@
             <label for="Password">PASSWORD</label>
             <input type="password" id="Password" name="Password">
         </form>
-        
+
+    <!--Boton de Start -->
+    <div id="button-container">
+        <a href="index.html" id="start-button">Start</a>
+    </div>
+    
 </body>
 </html>
