Se termina funcionalidad de pestaña

--- a/create_account.html
+++ b/create_account.html
@@ -11,13 +11,13 @@
     <header> Create Account </header>
 
     <!--Boton Return -->
-        <a href="../index.html" id="return-button">
+        <a href="../profile.html" id="return-button">
             <img src="Imagenes/return-icon.png" alt="Return">
         </a>
 
     <!-- Formulario -->
 
- 0       <form id="login-form">
+        <form id="login-form">
             <label for="Name">NAME</label>
             <input type="text" id="username" name="username">
 
@@ -33,7 +33,7 @@
 
     <!--Boton de Start -->
     <div id="button-container">
-        <a href="index.html" id="start-button">Start</a>
+        <a href="profile.html" id="start-button">Start</a>
     </div>
     
 </body>
