Se agrega el boton return

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <div class="days">
         <!--Lunes-->
         <div class="day">
-            Monday
-            <img src="Imagenes/calendar-icon.png" alt="Calendario">
+            <a href="Monday.html">
+                <img src="Imagenes/calendar-icon.png" alt="Calendario">
+                Monday
+            </a>
         </div>
 
         <!--Martes-->
