Titulo "Normal Week"

--- a/Monday.html
+++ b/Monday.html
@@ -18,6 +18,11 @@
     Daily Routine
 </header>
 
+<!-- Titulo linea horizontal -->
+<div class="line-container">
+    <h2>Normal week</h2>
+</div>
+
 
 
 
