Implementacion de barra media

--- a/Monday.html
+++ b/Monday.html
@@ -32,28 +32,34 @@
     <div class="task">
         <input type="checkbox" id="breakfast-check" name="breakfast-check">
         <label for="breakfast-check">Breakfast</label>
+        <span class="number">1</span>
         <span class="time">4:00 - 4:40</span>
     </div>
 
     <div class="task">
         <input type="checkbox" id="meditate-check" name="meditate-check">
         <label for="meditate-check">Meditate</label>
+        <span class="number">2</span>
         <span class="time">5:00 - 5:40</span>
     </div>
 
     <div class="task">
         <input type="checkbox" name="study-check" id="study-check">
         <label for="study-check">Study</label>
+        <span class="number">3</span>
         <span class="time">6:00 - 6:40</span>
     </div>
 
     <div class="task">
         <input type="checkbox" id="walk-check" name="walk-check">
         <label for="walk-check">Walk</label>
+        <span class="number">4</span>
         <span class="time">7:00 - 7:40</span>
     </div>
 
   </div>
+
+<!-- Botones "Statistic" y "Done"-->
 
 
 </body>
