--- a/Tuesday.html
+++ b/Tuesday.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monday</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Tuesday</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <!--Boton Return -->
-<a href="index.html">
-    <button id="return-button">
-        <img src="Imagenes/return-icon.png" alt="Return">
-    </button>
+<a href="../index.html" id="return-button">
+    <img src="Imagenes/return-icon.png" alt="Return">
 </a>
 
 <!-- Titulo -->
