--- a/Monday.html
+++ b/Monday.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monday</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <!--Boton Return -->
 <a href="index.html">
-    <button id="return-button">
         <img src="Imagenes/return-icon.png" alt="Return">
-    </button>
 </a>
 
 <!-- Titulo -->
