--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Routine</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
         
         <!--Miercoles-->
         <div class="day">
-            <a href="index.html">
+            <a href="Wednesday.html">
                 <img src="Imagenes/calendar-icon.png" alt="Calendario">
                 Wednesday
             </a>
