Se agrega la funcionalidad del dia jueves

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <!--Jueves-->
         <div class="day">
-            <a href="">
+            <a href="Thursday.html">
                 <img src="Imagenes/calendar-icon.png" alt="Calendario">
                 Thursday
             </a>
