Se agrega la funcionalidad del dia Viernes

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 
     <div class="Weekend">
                     <!--Viernes-->
-                    <div class="weekend">
-                        <a href="index.html">
+                    <div class="day">
+                        <a href="Friday.html">
                             <img src="Imagenes/calendar-icon.png" alt="Calendario">
                             Friday
                         </a>
                     </div>
             
                     <!--Sabado-->
-                    <div class="weekend">
+                    <div class="day">
                         <a href="index.html">
                             <img src="Imagenes/calendar-icon.png" alt="Calendario">
                             Saturday    
@@ -78,7 +78,7 @@
                     </div>
             
                     <!--Domingo-->
-                    <div class="weekend">
+                    <div class="day">
                         <a href="">
                             <img src="Imagenes/calendar-icon.png" alt="Calendario">
                             Sunday
