Se agrega la funcionalidad del dia domingo

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
                     <!--Domingo-->
                     <div class="day">
-                        <a href="">
+                        <a href="Sunday.html">
                             <img src="Imagenes/calendar-icon.png" alt="Calendario">
                             Sunday
                         </a>
