Se agrega funcionalidad del boton "Done" en el dia martes

--- a/Tuesday.html
+++ b/Tuesday.html
@@ -62,7 +62,9 @@
 <!-- Botones "Statistic" y "Done"-->
 
 <div id="button-container">
-    <button id="done-button">Done</button>
+    <a href="index.html">
+        <button id="done-button">Done</button>
+    </a>
 </div>
 
 
