--- a/create_account.html
+++ b/create_account.html
@@ -10,6 +10,8 @@
     <!--Titulo "Create Account--> 
     <header> Create Account </header>
 
+    <!--seccion botones y formulario-->
+
     <!--Boton Return -->
         <a href="../profile.html" id="return-button">
             <img src="Imagenes/return-icon.png" alt="Return">
