--- a/Tuesday.html
+++ b/Tuesday.html
@@ -59,7 +59,7 @@
 
   </div>
 
-<!-- Botones "Statistic" y "Done"-->
+<!-- Botones "Done"-->
 
 <div id="button-container">
     <a href="index.html">
