--- a/Monday.html
+++ b/Monday.html
@@ -59,7 +59,7 @@
 
   </div>
 
-<!-- Botones "Statistic" y "Done"-->
+<!-- Boton "Done"-->
 
 <div id="button-container">
     <a href="index.html">
